HTTP messaging added (not completed yet)